# andoku-sudoku-loader

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.rst  VERSION  docker-compose.yml  punch_config.py  punch_version.py  pyproject.toml  pytest.ini  run_app.py
.github/workflows/: pythonapp-selfhosted.yml  pythonapp.yml
app/: decode_sudoku.py
files/: std_n_1.adkb  std_n_2.adkb  std_n_3.adkb  std_n_4.adkb  std_n_5.adkb  std_n_6.adkb  std_n_7.adkb  std_n_8.adkb  std_n_9.adkb
tests/: conftest.py  test_simple.py
